Some more work done (doesn't really work though)

--- a/code_cpp/.vscode/launch.json
+++ b/code_cpp/.vscode/launch.json
@@ -22,6 +22,21 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "(gdb) Attach to PID",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "${workspaceRoot}/src/nanozombie.out",
+            "processId": "${command:pickProcess}",
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
